# ozelot

./: .gitignore  Cargo.toml
examples/: textclient.rs
src/: .clientbound-enum.generated.rs  .clientbound-packets.generated.rs  .serverbound-enum.generated.rs  .serverbound-packets.generated.rs  client.rs  clientbound.rs  connection.rs  lib.rs  mojang.rs  packet_definitions.clj  read.rs  server.rs  serverbound.rs  utils.rs  write.rs
src/tests/: datatypes.rs
