[package]
name = "ozelot"
version = "0.8.0"
authors = ["C4K3 <crates.io@c4k3.net>"]
description = "Handles everything network related to MCMODERN."
documentation = "https://c4k3.net/rustdocs/ozelot/ozelot/"
repository = "https://github.com/C4K3/ozelot/"
keywords = ["minecraft", "mc", "mcmodern"]
categories = ["games"]
license = "CC0-1.0"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", features = ["i128"] }
flate2 = "1.0.9"
netbuf = "0.4.1"
openssl = "0.10.23"
curl = "0.4.22"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
error-chain = "0.12.1"

[dev_dependencies]
rpassword = "3.0.2"
getopts = "0.2.19"
